Change some texts

--- a/index.html
+++ b/index.html
@@ -228,10 +228,10 @@
         Bine ai venit în propriul tău grimoar digital, creat special pentru tine — o eroină modernă cu puteri magice, răbdare infinită și un simț al umorului demn de legendă.
       </p>
       <p class="lead">
-        Aici se adună 33 de vrăji jucăușe, un număr complet aleator, menite să aducă zâmbete, alinări și mici minuni de zi cu zi.
+        Aici se adună 33 de vrăji jucăușe, un număr complet aleator, menite să aducă zâmbete și mici minuni de zi cu zi.
       </p>
       <p>
-        Alege vraja și trimite-o <strong>prin tărâmurile digitale</strong>. Invoc-o atunci când simți că ai nevoie — pentru un moment de calm, o aventură, sau pur și simplu ca să întorci norocul în favoarea ta.
+        Alege vraja și trimite-o <strong>prin tărâmurile digitale</strong>. Invoc-o atunci când simți că ai nevoie — pentru un moment de calm, o aventură, sau pur și simplu.
       </p>
     </div>
   </section>
@@ -241,7 +241,7 @@
     <div class="parchment">
       <h2 id="rules-title">Rules of the Realm <span class="twinkle" aria-hidden="true">✨</span></h2>
       <p>Fiecare carte ascunde o mică minune, o chemare sau o provocare. Doar <strong>eroina</strong> le poate stăpâni — iar squire‑ul Andrei, loial și un pic speriat, e sortit să răspundă.</p>
-      <p><strong>Invocarea</strong> are loc atunci când eroina descarcă o carte și o trimite prin tărâmurile digitale — fie mesaj, fie porumbel virtual. În clipa aceea, vraja prinde viață și universul tresare ușor.</p>
+      <p><strong>Invocarea</strong> are loc atunci când eroina download-ează o carte și o trimite prin tărâmurile digitale — fie mesaj, fie porumbel virtual. În clipa aceea, vraja prinde viață și universul tresare ușor.</p>
       <p><strong>Efectul</strong> este simplu: se întâmplă exact ce scrie pe carte. Nici mai mult, nici mai puțin. Dacă ceva e ambiguu… înseamnă că eroina a avut dreptate. 😇</p>
       <p>Există și o <strong>regulă nescrisă</strong>: folosește magia cu bunătate, umor și intenție luminoasă. Vrăjile nu sunt arme, ci mici alinări, glume și miracole cotidiene.</p>
       <p>Și dacă niciuna nu pare potrivită, <em>„The Blank Scroll"</em> așteaptă cuminte o cerere nouă — una sinceră, cu sclipiri în ochi și zâmbet pe buze.</p>
